added styling and changed date format

--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,4 +1,10 @@
 // colors
+$blue: #3386c3;
+$dark-blue: #124a7b;
+$white: #ffffff;
+$lightGray: #afafaf;
+$gray: #777777;
+$dark-gray: #191b1e;
 
 // sizes
 $x-small: 1.2rem;
