--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,2 +1,8 @@
 @import './base/settings';
 @import './base/base';
+@import './components/header';
+@import './components/content-container';
+@import './components/expense-list-filters';
+@import './components/expense-list-item';
+@import './components/button';
+@import './components/input';
