--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-  font-family: Helvetica, Arial, sans-serif;
+  font-family: 'Lucida Grande', 'Helvetica Neue', Arial, sans-serif;
   font-size: $small;
 }
 
