--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -1,7 +1,10 @@
 @mixin button {
   height: 60px;
-  width: 400px;
+  width: 800px;
   margin-bottom: 20px;
+  @media (max-width: 900px) {
+    width: 100%;
+  }
 }
 
 .button {
