--- a/src/styles/components/_content-container.scss
+++ b/src/styles/components/_content-container.scss
@@ -2,4 +2,7 @@
   margin: 0 auto;
   padding: 0 $medium;
   max-width: 1280px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
