--- a/src/styles/components/_input.scss
+++ b/src/styles/components/_input.scss
@@ -1,10 +1,19 @@
 @mixin date-input {
-  width: 400px;
+  width: 800px;
   margin-bottom: 20px;
+  @media (max-width: 900px) {
+    width: 98%;
+  }
 }
+
 @mixin input-common {
-  width: 380px;
+  width: 780px;
   margin-bottom: 20px;
+  border: 1px solid #ddd;
+  @media (max-width: 900px) {
+    width: 95%;
+    border: 1px solid #ddd;
+  }
 }
 .input {
   @include input-common;
