--- a/src/styles/components/_content-container.scss
+++ b/src/styles/components/_content-container.scss
@@ -6,3 +6,10 @@
   flex-direction: column;
   align-items: center;
 }
+
+.expense-forms-container {
+  padding-top: 60px;
+  h1 {
+    padding-bottom: 20px;
+  }
+}
